--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   },
   "homepage": "https://github.com/wrreiff/Knife-Store#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "pg": "^8.7.3",
     "postgres": "^3.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-modal": "^3.14.4",
-    "react-router-dom": "^6.3.0"
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
