--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@testing-library/cypress": "^8.0.2",
     "babel-loader": "^8.2.5",
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.3",
