--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
   },
   "homepage": "https://github.com/wrreiff/Knife-Store#readme",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.3",
     "@reduxjs/toolkit": "^1.8.1",
+    "cookie-parser": "^1.4.6",
     "pg": "^8.7.3",
     "postgres": "^3.1.0",
     "prop-types": "^15.8.1",
@@ -43,6 +48,7 @@
     "css-loader": "^6.7.1",
     "cypress": "^9.6.0",
     "eslint": "^8.14.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "isomorphic-fetch": "^3.0.0",
     "nodemon": "^2.0.15",
