--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@reduxjs/toolkit": "^1.8.1",
+    "domelementtype": "^2.3.0",
+    "cookie-parser": "^1.4.6",
     "pg": "^8.7.3",
     "postgres": "^3.1.0",
     "prop-types": "^15.8.1",
@@ -49,6 +51,7 @@
     "eslint": "^8.14.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "image-webpack-loader": "^8.1.0",
     "isomorphic-fetch": "^3.0.0",
     "nodemon": "^2.0.15",
     "sass": "^1.50.1",
